<resources>
    <string name="app_name">GetVaccinated</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="covid_19_vaccine_slot_finder">COVID-19 Vaccine Slot Finder</string>
    <string name="share">Share</string>
    <string name="notification">Notification</string>
    <string name="_1_check_vaccine_availability">1. Check vaccine availability</string>
    <string name="_2_find_centers_near_you">2. Find centers near you</string>
    <string name="_3_get_notified_when_slots_are_available">3. Get notified when slots are available</string>
    <string name="_4_book_your_appointment">4. Book your appointment</string>
    <string name="select_your_state">Select Your State</string>
    <string name="select_your_district">Select Your District</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="pincode">Pincode</string>
    <string name="_18_44">18–44</string>
    <string name="_45">45+</string>
    <string name="age_group">Age Group</string>
    <string name="check_availability">Check Availability</string>
    <string name="notify_me_when_slots_are_available">Notify me when slots are available</string>
    <string name="this_data_is_sourced_real_time_from_co_win">This data is sourced real time from <a href="https://www.cowin.gov.in/home">Co-WIN</a></string>
    <string name="pleas_use_the_co_win_app_to_book_vaccination_appointment">Please use the Co-WIN app to book vaccination appointment</string>
    <string name="dose">Dose</string>
    <string name="dose_1">Dose 1</string>
    <string name="dose_2">Dose 2</string>
    <string name="heading_slots">Dose %1$s slots in %2$s for age %3$s+</string>
    <string name="select_error">Please select your state and district</string>
    <string name="pincode_error">Please enter valid pincode</string>
    <string name="cowin_webite">You will be taken to the Co-WIN website to book your appointment</string>
    <string name="continue_book">Continue</string>
    <string name="cancel_book">Cancel</string>
    <string name="book_address">%1$s %2$s</string>
    <string name="image_error">image</string>
    <string name="ok">ok</string>
    <string name="book_now">Book Now</string>
    <string name="stop_alert">Stop Alert</string>
    <string name="no_slots">No slots available</string>
    <string name="please_wait">Please wait…</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="covaxin">Covaxin</string>
    <string name="covishield">Covishield</string>
    <string name="sputnik">Sputnik</string>
    <string name="select_alter_criteria">Select alert criteria</string>
    <string name="close">Close</string>
    <string name="vaccine">Vaccine</string>
    <string name="vaccine_1">Covishield</string>
    <string name="vaccine_2">Covaxin</string>
    <string name="vaccine_3">Sputnik V</string>
    <string name="user_subscribed">You have already registered to be notified when a slot opens</string>
    <string name="age">Age</string>
    <string name="district_heading">District:</string>
    <string name="error_message">Something went wrong. Please try again</string>
    <string name="appBarTitle">COVID-19 Vaccine Availability</string>
    <string name="appBarTitleNotification">Messages</string>
    <string name="message_not_available">Your slots alert will be shown here</string>
    <string name="no_active_alerts">You have no active alerts</string>
    <string name="view_alerts">View Alerts</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="notification_set">Notification set</string>
    <string name="alter_list">Alert list</string>
    <string name="happy_serve">We are happy to serve you</string>
    <string name="first_user">We have just now received another channel request for this District. Please check back in 24hrs.</string>
    <string name="success_message">You will get a notification as soon as vaccines are available in this area</string>
    <string name="unsubscribe_message">You have unsubscribed from alerts for %1$s \u2022 %2$s+ \u2022 Dose %3$s \u2022 %4$s</string>
    <string name="alert_unsubscribed">Alert unsubscribed</string>
    <string name="alert">Alert:</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="please_check_your_internet_settings">Please check your internet settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="retry">Retry</string>
</resources>