<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/select_alter_criteria"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="20dp"
        app:autoSizeMinTextSize="18dp"
        app:autoSizeStepGranularity="2dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:contentDescription="@string/close"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/ic_close_circle"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dose"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/dose"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:autoSizeMaxTextSize="14dp"
        app:autoSizeMinTextSize="12dp"
        app:autoSizeStepGranularity="2dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupDose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dose"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/Theme.Chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dose_1" />

        <com.google.android.material.chip.Chip
            style="@style/Theme.Chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dose_2" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/vaccineSwitch"
        style="@style/Theme.Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/vaccine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupDose" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vaccine"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/vaccine"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:autoSizeMaxTextSize="14dp"
        app:autoSizeMinTextSize="12dp"
        app:autoSizeStepGranularity="2dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupDose" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupVaccine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccine"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/Theme.Chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/vaccine_2" />

        <com.google.android.material.chip.Chip
            style="@style/Theme.Chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaccine_1" />

        <com.google.android.material.chip.Chip
            style="@style/Theme.Chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaccine_3" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/note_rounded_corner"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupVaccine">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/footerTextTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/note_vaccine"
            android:textAppearance="@style/Theme.Footer"
            android:textColorLink="@color/blue_500"
            app:autoSizeMaxTextSize="14dp"
            app:autoSizeMinTextSize="12dp"
            app:autoSizeStepGranularity="2dp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueSubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:elevation="0dp"
        android:padding="15dp"
        android:stateListAnimator="@null"
        android:text="@string/continue_book"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note" />
</androidx.constraintlayout.widget.ConstraintLayout>