<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curve_edge">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/centerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAppearance="@style/Theme.BottomSheetTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="45 CHC ABCDEFG" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/cowin_webite"
        android:textAppearance="@style/Theme.ErrorMessage"
        app:layout_constraintTop_toBottomOf="@id/centerName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bookAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/continue_book"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_book"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/bookAppointment" />
</androidx.constraintlayout.widget.ConstraintLayout>