<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:contentDescription="@string/close"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/ic_close_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bell"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/ic_bell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="20dp"
        app:autoSizeMinTextSize="18dp"
        app:autoSizeStepGranularity="2dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bell"
        tools:text="@string/notification_set" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/success_message"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:autoSizeMaxTextSize="14dp"
        app:autoSizeMinTextSize="12dp"
        app:autoSizeStepGranularity="2dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareApp"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="0dp"
        android:padding="15dp"
        android:stateListAnimator="@null"
        android:text="@string/share_with_your_friends"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_share_all_outline"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:rippleColor="@color/trans" />
</androidx.constraintlayout.widget.ConstraintLayout>