<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/centerName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="20dp"
        app:autoSizeMinTextSize="18dp"
        app:autoSizeStepGranularity="2dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="45 CHC ABCDEFG" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="clip_vertical"
        android:text="@string/cowin_webite"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:autoSizeMaxTextSize="14dp"
        app:autoSizeMinTextSize="12dp"
        app:autoSizeStepGranularity="2dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centerName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bookAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:elevation="0dp"
        android:padding="15dp"
        android:stateListAnimator="@null"
        android:text="@string/continue_book"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:rippleColor="@color/trans" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:elevation="0dp"
        android:padding="15dp"
        android:stateListAnimator="@null"
        android:text="@string/cancel_book"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookAppointment"
        app:rippleColor="@color/trans" />
</androidx.constraintlayout.widget.ConstraintLayout>